--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input class="u-full-width" type="text" name="name" value="" placeholder="name">
           </div>
           <div class="five columns">
-            <input class="u-full-width" type="text" name="url" value="" placeholder="silly picture URL">
+            <input class="u-full-width" type="text" name="url" placeholder="silly picture URL">
           </div>
           <div class="three columns">
             <button type="submit" class="button-primary" name="button">Adopt!</button>
@@ -37,6 +37,8 @@
         <div class="puppy-picture">
           <img src="" alt="" />
         </div>
+        <input class='likeButton' type="submit" name="like" value="Like">
+        <input class='abandonButton' type="submit" name="abandon" value="Abandon">
       </div>
       <div class="adopted-puppies">
         <!-- puppies from the template go here -->
